fix excess spacing introduced in simplecss 2.1.0

--- a/src/styles/resume.css
+++ b/src/styles/resume.css
@@ -4,6 +4,11 @@ main {
     padding-top: 0.5rem;
 }
 
+section {
+    border: none;
+    padding: 0;
+}
+
 h2, h3, h4, p, dl, ul {
     margin: 0.25rem 0;
 }
